--- a/HomePage/a1-section.html
+++ b/HomePage/a1-section.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
-    <link rel="stylesheet" type="text/css" href="../css/a1-section.css">
+    <link rel="stylesheet" type="text/css" href="./css/a1-section.css">
     <title>A1</title>
     
     <style>
@@ -24,13 +24,13 @@
                     <p class="a1-tag-line d-flex flex-row justify-content-center">A <span class="a1-tag-line-sub pl-3 pr-3">smart</span> printer that </p>
                     <p class="a1-tag-line d-flex flex-row justify-content-center">just <span class="a1-tag-line-sub pl-3"> keeps printing</span>  </p>
                     <div class="d-flex flex-row justify-content-center">
-                        <button class="btn btn-success" style="color:black; background-color: #05BC6C;"><a href="../a1.html" style="text-decoration:none;">Know More</a></button>                    </div>
+                        <button class="btn btn-success" style="color:black; background-color: #05BC6C;"><a href="./a1.html" style="text-decoration:none;">Know More</a></button>                    </div>
                 </div>     
             </div>
         <div class="d-flex flex-column justify-content-center">
             <div class="d-flex flex-row justify-content-end">
                 <div class="a1-render ">
-                    <img class="a1-render-image" src="../assets/A1.svg"/>
+                    <img class="a1-render-image" src="./assets/A1.svg"/>
                 </div>
             </div>
         </div>
