--- a/HomePage/USPsection.html
+++ b/HomePage/USPsection.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" type="text/css" href="../css/USPstyles.css">
+    <link rel="stylesheet" type="text/css" href="./css/USPstyles.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     
 
@@ -29,7 +29,7 @@
                             <p>This statement is about Services.This statement is about Services.This statement is about Services. </p>
                         </div>
                         <div class="name-card">
-                        <a href="../service.html"><p>Know More</p></a>
+                        <a href="./service.html"><p>Know More</p></a>
                         </div>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                             <p>This statement is about A1.This statement is about A1.This statement is about A1. </p>
                         </div>
                         <div class="name-card">
-                            <a href="../a1.html">Know More</a>
+                            <a href="./a1.html">Know More</a>
                         </div>
                     </div>
                 </div>
@@ -55,21 +55,21 @@
                             <p>This statement is about BioForm.This statement is about A1.This statement is about A1. </p>
                         </div>
                         <div class="name-card">
-                            <a href="../bioform-page.html">Know More</a>
+                            <a href="./bioform-page.html">Know More</a>
                         </div>
                     </div>
                 </div>
                 <div class="item gallery-item gallery-item-4" id="USPcloud">
                     <div class="card">
                         <div class="img-card">
-                            <img src="../assets/CloudSvgUSP.svg" alt="" id="cloud-svg" />
+                            <img src="./assets/CloudSvgUSP.svg" alt="" id="cloud-svg" />
                             <p id="cloud-content">.Kreator3d.com</p>
                         </div>
                         <div class="content-card">
                             <p>This statement is about Cloud.This statement is about Cloud.This statement is about Cloud. </p>
                         </div>
                         <div class="name-card">
-                            <a href="../cloud-main.html">Know More</a>
+                            <a href="./cloud-main.html">Know More</a>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                             <p>This statement is about CNC. This statement is about CNC. This statement is about CNC. </p>
                         </div>
                         <div class="name-card">
-                            <a href="../cnc.html">Know More</a>
+                            <a href="./cnc.html">Know More</a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
             </div> -->
         </div>
     </div>
-    <script src="../Js/USPsection.js"></script>
+    <script src="./Js/USPsection.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
