--- a/HomePage/cloud-page.html
+++ b/HomePage/cloud-page.html
@@ -5,20 +5,20 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="../css/cloud-page.css">
+  <link rel="stylesheet" type="text/css" href="./css/cloud-page.css">
   <title>cloudPage</title>
 </head>
 
 <body>
   <div class="image-container">
-    <img src="../assets/computersvg.svg" alt="computer" id="computer-render" />
-    <img src="../assets/cloudLeftSide.svg" alt="" id="cloud-left-side">
+    <img src="./assets/computersvg.svg" alt="computer" id="computer-render" />
+    <img src="./assets/cloudLeftSide.svg" alt="" id="cloud-left-side">
     <div class="heading">
-      <img src="../assets/cloudSvg.svg" alt="" id="cloud-svg" />
+      <img src="./assets/cloudSvg.svg" alt="" id="cloud-svg" />
       <br>
       <p>.Kreator3d.com</p>
     </div>
-    <img src="../assets/cloudRightSide.svg" alt="" id="cloud-right-side">
+    <img src="./assets/cloudRightSide.svg" alt="" id="cloud-right-side">
   </div>
 </body>
 
