--- a/HomePage/testimonials-page.html
+++ b/HomePage/testimonials-page.html
@@ -2,8 +2,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>testimonials</title>
-    <!-- <link rel="stylesheet" href="../tempFiles/testimonialPage.css"> -->
-    <link rel="stylesheet" type="text/css" href="../css/testimonial-page.css">
+    <!-- <link rel="stylesheet" href="./tempFiles/testimonialPage.css"> -->
+    <link rel="stylesheet" type="text/css" href="./css/testimonial-page.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Raleway:ital,wght@0,500;1,300&family=Water+Brush&display=swap');
     </style>
@@ -17,15 +17,15 @@
 
             </div>
             <div class="testimonial-companies">
-                <div> <img class="testimonial-icon" src="../assets/yourstory.svg" alt="logo" id="1"
+                <div> <img class="testimonial-icon" src="./assets/yourstory.svg" alt="logo" id="1"
                         onclick="imgClickHandler(this.id)"> </div>
-                <div> <img class="testimonial-icon" src="../assets/Daily hunt logo 1.svg" alt="logo" id="2"
+                <div> <img class="testimonial-icon" src="./assets/Daily hunt logo 1.svg" alt="logo" id="2"
                         onclick="imgClickHandler(this.id)"></div>
-                <div> <img class="testimonial-icon" src="../assets/Indian Express LOGO 2.svg" alt="logo" id="3"
+                <div> <img class="testimonial-icon" src="./assets/Indian Express LOGO 2.svg" alt="logo" id="3"
                         onclick="imgClickHandler(this.id)"></div>
-                <div><img class="testimonial-icon" src="../assets/Bio Spectrum logo WB 2.svg" alt="logo" id="4"
+                <div><img class="testimonial-icon" src="./assets/Bio Spectrum logo WB 2.svg" alt="logo" id="4"
                         onclick="imgClickHandler(this.id)"></div>
-                <div> <img class="testimonial-icon" src="../assets/Chennai incider logo 4.svg" alt="logo" id="5"
+                <div> <img class="testimonial-icon" src="./assets/Chennai incider logo 4.svg" alt="logo" id="5"
                         onclick="imgClickHandler(this.id)"></div>
             </div>
         </div>
@@ -39,13 +39,13 @@
                         <button class="btn btn-success" id="know_more_button"><a href="bioform-page.html">Know More</a></button>
                     </div>
 
-                <img src="../assets/Vector1.svg" alt="" id="banner-curve">
+                <img src="./assets/Vector1.svg" alt="" id="banner-curve">
             </div>
 
             <div class="banner-right">
 
-                <img src="../assets/Comunity illustration 1.svg" alt="" id="community-illustration">
+                <img src="./assets/Comunity illustration 1.svg" alt="" id="community-illustration">
             </div>
         </div>
     </div>
-    <script src="../Js/testimonial-page.js"></script>
+    <script src="./Js/testimonial-page.js"></script>
