--- a/a1-page/a1-hotend.html
+++ b/a1-page/a1-hotend.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="../css/a1-hotend.css">
+   <link rel="stylesheet" href="./css/a1-hotend.css">
     <title>hotend</title>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Raleway:ital,wght@0,500;1,300&family=Water+Brush&display=swap");
@@ -18,7 +18,7 @@
          <p id="a1-hotend-paragraph2">Drasticaly Reduce your<br>down time</p>
         </div>
         <div class="a1-hotend-image">
-        <img src="../assets/hotend-image.svg" alt="hotend">
+        <img src="./assets/hotend-image.svg" alt="hotend">
         </div>
     </div>
 </body>
