--- a/a1-page/a1-specifcations.html
+++ b/a1-page/a1-specifcations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/a1-specifications.css">
+    <link rel="stylesheet" href="./css/a1-specifications.css">
     <title>a1-specifications</title>
     <style>
          @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Raleway:ital,wght@0,500;1,300&family=Water+Brush&display=swap");
@@ -43,7 +43,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-   <script src="../js/a1-specifications.js"></script>
+   <script src="./js/a1-specifications.js"></script>
      
  
 </body>
