--- a/a1-page/a1_aluminium_frame.html
+++ b/a1-page/a1_aluminium_frame.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/a1_aluminium_frame.css">
+    <link rel="stylesheet" href="./css/a1_aluminium_frame.css">
 
     <title>Document</title>
     <style>
@@ -22,7 +22,7 @@
             <div class="a1_aluminium_frame_left_bottom">
                 <div class="a1_aluminium_frame_left_light">
                     <div class="a1_aluminium_frame_left_feather">
-                        <img src="../assets/feather.png" alt="">
+                        <img src="./assets/feather.png" alt="">
                     </div>
                     <div class="a1_aluminium_frame_left_light_text">
                         <p>Light</p>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="a1_aluminium_frame_left_durable">
                     <div class="a1_aluminium_frame_left_hammer">
-                        <img src="../assets/Hammer.png" alt="">
+                        <img src="./assets/Hammer.png" alt="">
                     </div>
                     <div class="a1_aluminium_frame_left_durable_text">
                         <p>Durable</p>
@@ -41,7 +41,7 @@
         <div class="d-flex flex-column justify-content-center">
             <div class="d-flex flex-row justify-content-end">
                 <div class="render_section">
-                    <img class="render" src="../assets/render.png" />
+                    <img class="render" src="./assets/render.png" />
                 </div>
             </div>
         </div>
