--- a/a1-page/lucid-design.html
+++ b/a1-page/lucid-design.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lucid-design</title>
-    <link rel="stylesheet" href="../css/lucid-design.css">
+    <link rel="stylesheet" href="./css/lucid-design.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Raleway:ital,wght@0,500;1,300&family=Water+Brush&display=swap');
     </style>
@@ -19,7 +19,7 @@
             <p id="seam">Seamlessly fits in your workspace</p>
         </div>
         <div class="image">
-            <img src="../assets/A1-printer.svg" alt="image" id="printer">
+            <img src="./assets/A1-printer.svg" alt="image" id="printer">
         </div>
     </div>
 </body>
