--- a/nav-bar.html
+++ b/nav-bar.html
@@ -25,7 +25,7 @@
         <nav style="display:inline-flex;">
             <ul>
                 <!-- The list of elements in the menu -->
-                <li><a href="home-page.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="a1.html">Product</a></li>
                 <li><a href="community-page.html">Community</a></li>
                 <li><a href="aboutuspage.html">About us</a></li>
