--- a/HomePage/tools-for-innovation.html
+++ b/HomePage/tools-for-innovation.html
@@ -12,10 +12,10 @@
     
     <div class="tools-for-innovation">
       <div id="tools-for-innovation-image1">
-        <img src="./assets/printer1.png" alt="image" />
+        <img src="assets/printer1.png" alt="image" />
       </div>
       <div id="tools-for-innovation-image2">
-        <img src="./assets/printer2.png" alt="image" />
+        <img src="assets/printer2.png" alt="image" />
       </div>
       <div id="tools-for-innovation-content">
         <p>Tools for innovation</p>
