--- a/HomePage/bioform.html
+++ b/HomePage/bioform.html
@@ -17,21 +17,21 @@
     <div class="bioform">
         <div class="bioform_left">
             <div class="bioform_SVG">
-                <img id="bioform_image1" src="/assets/icons8-biology-dna.png" alt="" class="src">
-                <img id="bioform_image2" src="/assets/icons8-biology-dna.png" alt="" class="src">
-                <img id="bioform_image3" src="/assets/icons8-body-cells-50 (1).png" alt="" class="src">
-                <img id="bioform_image4" src="/assets/icons8-blood-cells-64.png" alt="" class="src">
-                <img id="bioform_image5" src="/assets/icons8-blood-cells-64.png" alt="" class="src">
-                <img id="bioform_image6" src="/assets/icons8-blood-cells-64.png" alt="" class="src">
-                <img id="bioform_image7" src="/assets/icons8-eukaryotic-cells-50.png" alt="" class="src">
-                <img id="bioform_image8" src="/assets/icons8-eukaryotic-cells-50.png" alt="" class="src">               
-                <img id="bioform_image9" src="/assets/icons8-microorganisms-96.png" alt="" class="src">
-                <img id="bioform_image10" src="/assets/icons8-cell-64.png" alt="">
-                <img id="bioform_image11" src="/assets/icons8-cell-64.png" alt="">
-                <img id="bioform_image12" src="/assets/icons8-cells-66.png" alt="" class="src">
-                <img id="bioform_image13" src="/assets/icons8-cells-66.png" alt="" class="src">   
-                <img id="bioform_image14" src="/assets/icons8-biology-dna.png" alt="" class="src">  
-                <img id="bioform_image15" src="/assets/icons8-cell-64.png" alt="">      
+                <img id="bioform_image1" src="assets/icons8-biology-dna.png" alt="" class="src">
+                <img id="bioform_image2" src="assets/icons8-biology-dna.png" alt="" class="src">
+                <img id="bioform_image3" src="assets/icons8-body-cells-50 (1).png" alt="" class="src">
+                <img id="bioform_image4" src="assets/icons8-blood-cells-64.png" alt="" class="src">
+                <img id="bioform_image5" src="assets/icons8-blood-cells-64.png" alt="" class="src">
+                <img id="bioform_image6" src="assets/icons8-blood-cells-64.png" alt="" class="src">
+                <img id="bioform_image7" src="assets/icons8-eukaryotic-cells-50.png" alt="" class="src">
+                <img id="bioform_image8" src="assets/icons8-eukaryotic-cells-50.png" alt="" class="src">               
+                <img id="bioform_image9" src="assets/icons8-microorganisms-96.png" alt="" class="src">
+                <img id="bioform_image10" src="assets/icons8-cell-64.png" alt="">
+                <img id="bioform_image11" src="assets/icons8-cell-64.png" alt="">
+                <img id="bioform_image12" src="assets/icons8-cells-66.png" alt="" class="src">
+                <img id="bioform_image13" src="assets/icons8-cells-66.png" alt="" class="src">   
+                <img id="bioform_image14" src="assets/icons8-biology-dna.png" alt="" class="src">  
+                <img id="bioform_image15" src="assets/icons8-cell-64.png" alt="">      
                 <div class="bioform_title">
                     <p>
                         <span class="green">Bio</span><span class="black">Form</span>
@@ -48,7 +48,7 @@
             </div>
             
             <div class="bioform_render">
-                <img src="/assets/A1.png" alt="">
+                <img src="assets/A1.png" alt="">
             </div>
         </div>
     </div>
