--- a/a1-page/lucid-design.html
+++ b/a1-page/lucid-design.html
@@ -19,7 +19,7 @@
             <p id="seam">Seamlessly fits in your workspace</p>
         </div>
         <div class="image">
-            <img src="./assets/A1-printer.svg" alt="image" id="printer">
+            <img src="assets/A1-printer.svg" alt="image" id="printer">
         </div>
     </div>
 </body>
