--- a/a1-page/a1-specifcations.html
+++ b/a1-page/a1-specifcations.html
@@ -43,7 +43,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-   <script src="./js/a1-specifications.js"></script>
+   <script src="Js/a1-specifications.js"></script>
      
  
 </body>
