--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
             <div id="product_navbar"></div>
         </section>
              <div class="div1"> 
-                <img src="./assets/plus.svg" alt="" id="img1">
+                <img src="assets/plus.svg" alt="" id="img1">
              </div>
              <div class='div1text'>
                 <h1>Us</h1>
@@ -37,14 +37,14 @@
                 <h1>Want to <span> realise </span>your Idea?</h1>
             </div>
              <div class="div2">
-                   <img src="/assets/img2.svg" alt="" id="img2">
+                   <img src="assets/img2.svg" alt="" id="img2">
              </div>
             <div class='div3text'>
                 <h1>Get your ideas delivered to <br>
                 your <span>door step!</span></h1>
             </div>
             <div class="div3">
-                <img src="/assets/img3.svg" alt="" id="img3">
+                <img src="assets/img3.svg" alt="" id="img3">
             </div>
             <div class='div3text'>
                 <h1>Your designs are in <br>
@@ -56,7 +56,7 @@
                 giving your valuble designes in someone’s hand 
             </div>
             <div class="div4">
-                <img src="/assets/img4.svg" alt="" id="img4">
+                <img src="assets/img4.svg" alt="" id="img4">
             </div>
             <div class="div4text">
                 <h1>
@@ -66,7 +66,7 @@
                 </h1>
             </div>
             <div class="div5">
-                <img src="/assets/img5.svg" alt="" id="img5">
+                <img src="assets/img5.svg" alt="" id="img5">
             </div>
             <div class="div4text">
                 <h1>
@@ -80,7 +80,7 @@
             Accurate And Fast.
             </div>
             <div class="div6">
-                <img src="/assets/img6.svg" alt="" id="img6">
+                <img src="assets/img6.svg" alt="" id="img6">
             </div>
             <section>
                 <!-- Footer -->
