--- a/community-page.html
+++ b/community-page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community</title>
-    <link rel="stylesheet" href="css\community-page.css">
+    <link rel="stylesheet" href="css/community-page.css">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Raleway:ital,wght@0,500;1,300&family=Water+Brush&display=swap");
     </style>
@@ -38,13 +38,13 @@
         <div class="meet">
             <h1 id="meet-us">Meet Our Community</h1>
             <div class="left-circle-1">
-                <img src="assets\circle-left.svg" alt="image" id="left-image-circle-1">
+                <img src="assets/circle-left.svg" alt="image" id="left-image-circle-1">
             </div>
             <div class="right-circle-1">
-                <img src="assets\circle-right.svg" alt="image" id="right-image-circle-1">
+                <img src="assets/circle-right.svg" alt="image" id="right-image-circle-1">
             </div>
             <div class="community-image">
-                <img src="assets\community-main-illustration.svg" alt="image">
+                <img src="assets/community-main-illustration.svg" alt="image">
             </div>
         </div>
         <div class="only-text">
@@ -52,10 +52,10 @@
                 <p id="text-community">We don't believe one size fits all. <br> <br> Involve yourself with us to create <br> the next generation of <br> technologies</p>
             </div>
             <div class="left-circle-2">
-                <img src="assets\circle-left.svg" alt="image" id="left-image-circle-2">
+                <img src="assets/circle-left.svg" alt="image" id="left-image-circle-2">
             </div>
             <div class="right-circle-2">
-                <img src="assets\circle-right.svg" alt="image" id="right-image-circle-2">
+                <img src="assets/circle-right.svg" alt="image" id="right-image-circle-2">
             </div>
         </div>
         <div class="text-button">
@@ -64,13 +64,13 @@
                 <button class="btn-success" style="background-color: #05BC6C;">Join us</button>
             </div>
             <div class="left-circle-3">
-                <img src="assets\circle-left.svg" alt="image" id="left-image-circle-3">
+                <img src="assets/circle-left.svg" alt="image" id="left-image-circle-3">
             </div>
             <div class="right-circle-3">
-                <img src="assets\circle-right.svg" alt="image" id="right-image-circle-3">
+                <img src="assets/circle-right.svg" alt="image" id="right-image-circle-3">
             </div>
             <div class="word-cloud">
-                <img src="assets\wordcloud-1-community.svg" alt="image" id="word-cloud">
+                <img src="assets/wordcloud-1-community.svg" alt="image" id="word-cloud">
             </div>
            
         </div>
