--- a/product-navbar.html
+++ b/product-navbar.html
@@ -16,7 +16,7 @@
                    <img src="./assets/A1-logo.svg" alt="" class="image-logo">
                    <p class="current_Product">A1</p>
               </div></a>
-            <a href="cloud-main.html"><div>
+            <a href="cloud-main.html" class="iconcloud"><div>
                 <div><img src="./assets/kreatorcloud-logo.svg" alt="" class="image-logo"></div>
                 <p>Kreator cloud</p>
             </div>
@@ -25,7 +25,7 @@
                 <img src="./assets/bioform-logo.svg" alt="" class="image-logo">
                 <p>Bio form</p>
             </div> </a>
-           <a href="cnc.html"> <div>
+           <a href="cnc.html" class="iconcnc"> <div>
                 <img src="./assets/CNC-logo.svg" alt="" class="image-logo">
                 <p>CNC</p>
             </div> </a>
